--- a/style.css
+++ b/style.css
@@ -2027,8 +2027,8 @@ nav.navbar {
 	border-radius: 0;
 	border: none;
 	margin: 0;
-	box-shadow: 0px 0px 1px rgba(0,0,0,0.4);
-	-webkit-box-shadow: 0px 0px 1px rgba(0,0,0,0.4);
+
+
 	z-index: 2;
 	-webkit-transition: all 0.5s ease-in-out;
 	-moz-transition: all 0.5s ease-in-out;
@@ -3587,7 +3587,7 @@ ul.posts-line .post .title {
 	margin-left: 0;
 }
 .my_navbar {
-	background-color: rgb(89, 87, 87) !important;
+	background-color: transparent !important;
 }
 #promo_text {
 	font-size: 25px !important;
